# MCORE

./: .clang-format  .clangd  .cproject  .gitignore  .mxproject  .project  ANALYZER_FIX.md  CMakeLists.txt  ETH_OPTIMIZATIONS_SUMMARY.md  README.md  SPI_COM Debug.cfg  SPI_COM Debug.launch  STM32F767ZITX_FLASH.ld  TCP_PROCESSING_FIXES.md  TCP_STRUCT_OPTIMIZATIONS.md  UTILS_FIXES.md  icmp_nmap_windows.ps1  mcore Debug.launch  mcore.cfg  mcore.ioc  mcore.launch  mcore_regs.hpp
.cache/clangd/index/: main.cpp.53C79302D52A3B93.idx  mcore.hpp.78982CC19361E1A4.idx  mcore_def.hpp.F65BF6059CF9A190.idx  mcore_mpu.cpp.AC7E8EAC2AD724A3.idx  mcore_mpu.hpp.1725698EF8A0AEC0.idx  mcore_nvic.hpp.613878E2D51EBEEC.idx  mcore_rcc.cpp.B458EFA81DD3E72B.idx  mcore_rcc.hpp.9BC2D4382D243078.idx  mcore_regs.hpp.D707F8E1A3BB0791.idx  mcore_utils.hpp.8D96818F64A2BD98.idx  stm32f7xx_it.c.F51403815B5527BA.idx  stm32f7xx_it.h.69BC628E3080E44C.idx
.github/workflows/: build.yml
Core/: .cproject  .project
Core/Inc/: main.hpp  mcore.hpp  mcore_adc.hpp  mcore_can.hpp  mcore_conf.hpp  mcore_def.hpp  mcore_dma.hpp  mcore_eth.hpp  mcore_eth_utils.hpp  mcore_gpio.hpp  mcore_i2c.hpp  mcore_mpu.hpp  mcore_net.hpp  mcore_nvic.hpp  mcore_nvic_def.hpp  mcore_rcc.hpp  mcore_regs.hpp  mcore_system.hpp  mcore_tcp.hpp  mcore_temp_frame.hpp  mcore_tim.hpp  mcore_usart.hpp  mcore_utils.hpp  mcore_ws2812.hpp  stm32f7xx_it.h
Core/Src/: main.cpp  mcore_eth.cpp  mcore_eth_utils.cpp  mcore_gpio.cpp  mcore_mpu.cpp  mcore_net.cpp  mcore_rcc.cpp  mcore_system.cpp  mcore_tcp.cpp  ssss.cpp  stm32f7xx_it.c  syscalls.c  system_stm32f7xx.c  system_stm32f7xx.cpp
Core/Startup/: startup_stm32f767zitx.s
Debug/: makefile  mcore.elf  mcore.hex  mcore.list  mcore.map  mcore.verilog  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  mcore_eth.cyclo  mcore_eth.d  mcore_eth.su  mcore_eth_utils.cyclo  mcore_eth_utils.d  mcore_eth_utils.su  mcore_gpio.cyclo  mcore_gpio.d  mcore_gpio.su  mcore_mpu.cyclo  mcore_mpu.d  mcore_mpu.su  mcore_net.cyclo  mcore_net.d  mcore_net.su  mcore_rcc.cyclo  mcore_rcc.d  mcore_rcc.su  mcore_system.d  mcore_system.su  mcore_tcp.cyclo  mcore_tcp.d  mcore_tcp.su  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  system_stm32f7xx.d
Debug/Core/Startup/: subdir.mk
Drivers/CMSIS/: LICENSE.txt
Drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f7xx.h  system_stm32f7xx.h
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm7.h  mpu_armv7.h  mpu_armv8.h  tz_context.h
NVICGen/: irqs.txt  nvic_gen.py  nvic_ipr.txt
RegistersGen/: svd2reg.py  xml-svd2reg.py
Release/: makefile  objects.list  sources.mk
Release/Core/Src/: main.cyclo  main.d  main.su  mcore_eth.d  mcore_eth_utils.cyclo  mcore_eth_utils.d  mcore_eth_utils.su  mcore_gpio.d  mcore_mpu.cyclo  mcore_mpu.d  mcore_mpu.su  mcore_net.cyclo  mcore_net.d  mcore_net.su  mcore_rcc.d  mcore_system.cyclo  mcore_system.d  mcore_tcp.d  stm32f7xx_it.cyclo  stm32f7xx_it.d  subdir.mk  system_stm32f7xx.d
Release/Core/Startup/: subdir.mk
app/: board.hpp  config.hpp  main.cpp  main.hpp  shuttle_test.cpp  syscalls.c
codegen/nvic/: irqn_type_autogen.hpp  nvic_gen.py  nvic_irq_map.hpp
codegen/registers/: mcore_regs.hpp
config_default/: CMakeCache.txt  Makefile  STM32F767  STM32F767.map  cmake_install.cmake  compile_commands.json
debug/: MCORE_Debug.cfg
debug/openocd/board/: stm32_st_board.vm
mcore/: mcore.hpp
mcore/core/: atomic.hpp  def.hpp  device.hpp  mcore_config.hpp  mpu.cpp  mpu.hpp  nvic.hpp  nvic_def.hpp  profile.hpp  rcc.hpp  regs.hpp  ring_buffer.hpp  scheduler.hpp  system.cpp  system.hpp  utils.hpp
mcore/drivers/: adc.hpp  can.hpp  common.hpp  dma.hpp  eth.cpp  eth.hpp  gpio.hpp  i2c.hpp  tim.hpp  usart.hpp  ws2812.hpp
mcore/drivers/devices/: eeprom_47l16.hpp
mcore/net/: dhcp.cpp  dhcp.hpp  eth_utils.cpp  eth_utils.hpp  net.cpp  net.hpp  port.cpp  tcp.cpp  tcp.hpp  temp_frame.hpp
platform/: STM32F767ZITX_FLASH.ld  STM32F767ZITX_RAM.ld  startup_stm32f767zitx.s
py/: mcore_regs.hpp  mcore_utils.hpp  svd2reg.py
tests/: .clangd  CMakeLists.txt  helpers.hpp  stubs.cpp  test_dhcp.cpp  test_eth_utils.cpp  test_net.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_support.hpp  test_tcp.cpp
tools/: fetch_svd.cmake
